crates/strider-analyze/tests/snapshots/v3__x64__patterns__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4011c0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x4011d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0xdeadbeef:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x4011f0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v19" [label="Post Call\nRSI", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v20" [color="#888888", style=dashed];
  "v20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "21" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x401210:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nRSI", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v26" [color="#888888", style=dashed];
  "v26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v27" [color="#888888", style=dashed];
  "v27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x401240:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v34" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v34" [color="#888888", style=dashed];
  "v34" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "29" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v39" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v39" [color="#888888", style=dashed];
  "v39" -> "36" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v40" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v40" [color="#888888", style=dashed];
  "v40" -> "36" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v41" [color="#888888", style=dashed];
  "v41" -> "36" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "38" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v45" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v45" [color="#888888", style=dashed];
  "v45" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "46" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "46" [label="MemPartition[MemPartitionId(5)]", shape=trapezium, fillcolor="#3a1a4a"];
  "29" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "50" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "46" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v51" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v51" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "52" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v53" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v53" [color="#888888", style=dashed];
  "v53" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "54" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "55" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x4010b3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "58" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "58" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "62" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "22" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v65" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v65" [color="#888888", style=dashed];
  "v65" -> "64" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "67" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "68" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x401099:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "71" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "74" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "71" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "74" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "71" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "75" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "77" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "78" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v79" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v79" [color="#888888", style=dashed];
  "v79" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "80" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "80" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "81" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "80" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "80" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x401079:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "81" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "84" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v85" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v85" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "86" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "86" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "87" -> "86" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "86" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "84" -> "87" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "87" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "84" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "8" -> "84" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "88" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "88" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v89" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v89" [color="#888888", style=dashed];
  "v89" -> "88" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "90" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "90" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "91" -> "90" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v92" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v92" -> "90" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "93" -> "90" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x401061:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "91" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "94" -> "91" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v95" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v95" -> "91" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "96" -> "91" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "96" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "97" -> "96" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "96" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "97" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "94" -> "97" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "97" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "94" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "94" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nR8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "98" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "98" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "99" -> "98" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v100" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v100" -> "98" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "101" -> "98" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "101" [label="const 0x401044:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "99" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "102" -> "99" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v103" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v103" -> "99" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "104" -> "99" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "104" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "102" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "105" -> "102" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "105" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
